Revert "Merge pull request #1 from 2dactionrpg/remove-turtle"
This reverts commit 90efa3e164e2cb61eedb8a806e0d6530fc6f33ef, reversing
changes made to fe23603ceda258ca46eee9e0eb5b789b0fc5980f.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,6 +35,7 @@ set(SOURCE_FILES
 	src/common.cpp
 	src/fish.cpp
 	src/salmon.cpp
+	src/turtle.cpp
 	src/water.cpp
 	src/world.cpp
   src/pebbles.cpp
@@ -43,6 +44,7 @@ set(SOURCE_FILES
 	src/common.hpp
 	src/fish.hpp
 	src/salmon.hpp
+	src/turtle.hpp
 	src/water.hpp
 	src/world.hpp
   src/pebbles.hpp
