--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,14 +34,16 @@ set(SOURCE_FILES
 	src/main.cpp
 	src/character.cpp
 	src/common.cpp
+	src/cherec.cpp
 	src/salmon.cpp
 	src/water.cpp
 	src/world.cpp
   src/pebbles.cpp
 
-    src/project_path.hpp
+  src/project_path.hpp
 	src/character.hpp
 	src/common.hpp
+	src/cherec.hpp
 	src/salmon.hpp
 	src/water.hpp
 	src/world.hpp
